# get_wmi_serial_number

./: Cargo.toml  README.md
src/: main.rs
